2006-03-23  Assaf Gordon  <agordon88@gmail.com>

	* src/gnome-cmd-dir-indicator.c:
	* src/gnome-cmd-search-dialog.c:
	* src/owner.c:
	* src/utils.c:
	Fixed memory bugs

2006-03-21  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-list.c:
        Added CTRL+SHIFT+A for deselecting all files (for conformance with HIG 2.0)

2006-03-17  Assaf Gordon  <agordon88@gmail.com>

	* src/gnome-cmd-file-selector.c:
	Fixed a crash when viewing "SMB" connections.

	* src/ls_colors.c:
	Variable val might be read from uninitialized memory (if key is null)

2006-03-15  Assaf Gordon  <agordon88@gmail.com>

	* src/gnome-cmd-search-dialog.c:
	This should fix bug #171051

	* src/libgviewer/text-render.c:
	Fixed endless loop when viewing files > 40MB

	* src/libgviewer/cp437.c:
	* src/libgviewer/datapresentation.c:
	* src/libgviewer/datapresentation.h:
	* src/libgviewer/fileops.c:
	* src/libgviewer/fileops.h:
	* src/libgviewer/gvtypes.h:
	* src/libgviewer/image-render.c:
	* src/libgviewer/image-render.h:
	* src/libgviewer/inputmodes.c:
	* src/libgviewer/inputmodes.h:
	* src/libgviewer/libgviewer.c:
	* src/libgviewer/libgviewer.h:
	* src/libgviewer/scroll-box.c:
	* src/libgviewer/scroll-box.h:
	* src/libgviewer/text-render.c:
	* src/libgviewer/text-render.h:
	* src/libgviewer/viewer-widget.c:
	* src/libgviewer/viewer-widget.h:
	* src/libgviewer/viewer-window.c:
	* src/libgviewer/viewer-window.h:
	Added missing GPL

2006-03-10  Piotr Eljasiak  <epiotr@use.pl>

	* src/libgviewer/viewer-widget.c:
        i18n

2006-03-09  Assaf Gordon  <agordon88@gmail.com>

	* src/libgviewer/fileops.c:
        Fixed bad initialization in gv_fileops_new()

2006-03-08  Assaf Gordon  <agordon88@gmail.com>

	* src/gnome-cmd-con-device.c:
	* src/gnome-cmd-data.c:
	* src/gnome-cmd-options-dialog.c:
        Fixed the VFS auto volume mounting.

2006-03-08  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-selector.c: 
        Fixed wrong i18n, reported by Špela Počkar
